<resources>
    <string name="app_name">Rick &amp; Morty App by Krautsevich</string>
    <string name="hint_char_name">Name</string>
    <string name="hint_char_species">Species</string>
    <string name="hint_char_gender">Gender</string>
    <string name="hint_char_status">Status</string>
    <string name="label_name">Name:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_species">Species:</string>
    <string name="label_status">Status:</string>
    <string name="hint_episode_name">episode_name</string>
    <string name="hint_episode_number">episode_number</string>
    <string name="hint_episode_air_date">episode_air_date</string>
    <string name="label_ep_name">Name:</string>
    <string name="label_ep_episode">Episode:</string>
    <string name="label_ep_air_date">Air date:</string>
    <string name="hint_location_name">Location name</string>
    <string name="hint_location_type">Location type</string>
    <string name="hint_location_dimension">Location dimension</string>
    <string name="label_loc_name">Loc. name:</string>
    <string name="label_loc_type">Loc. type:</string>
    <string name="label_loc_dimension">Dimension:</string>
    <string name="bot_nav_to_characters">To characters</string>
    <string name="bot_nav_to_locations">To locations</string>
    <string name="bot_nav_to_eps">To episodes</string>
    <string name="show_filters_button">Show filters</string>
    <string name="hide_filters_button">Hide filters</string>
    <string name="filter_name">Name</string>
    <string name="filter_code">Code</string>
    <string name="hint_filter_episode_name">Episode name</string>
    <string name="hint_filter_episode_code">Episode code</string>
    <string name="button_use_filter">Use filter</string>
    <string name="filter_type">Type</string>
    <string name="hint_filter_location_name">Location name</string>
    <string name="hint_filter_location_type">Location type</string>
    <string name="filter_dimension">Dimension</string>
    <string name="hint_filter_location_dimension">Location dimension</string>
    <string name="filter_species">Species</string>
    <string name="hint_filter_character_species">Character species</string>
    <string name="hint_filter_character_type">Character type</string>
    <string name="hint_filter_character_name">Character name</string>
    <string name="filter_status">Status</string>
    <string name="filter_gender">Gender</string>
    <string name="no_results_found_textview">No results found</string>
    <string name="ep_name">Name:</string>
    <string name="ep_code">Episode code:</string>
    <string name="ep_air_date">Air date:</string>
    <string name="ep_id">Episode id:</string>
    <string name="ep_url">URL:</string>
    <string name="ep_created">Created:</string>
    <string name="char_name">Name:</string>
    <string name="char_species">Species:</string>
    <string name="char_gender">Gender:</string>
    <string name="char_status">Status:</string>
    <string name="char_type">Type:</string>
    <string name="char_origin">Origin:</string>
    <string name="char_location">Location:</string>
    <string name="loc_type">Type:</string>
    <string name="loc_dimension">Dimension:</string>
    <string name="loc_name">Name:</string>
    <string name="search_menu">Search</string>
</resources>