<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/char_image"
        style="@style/ImageViewOfRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_textview"
        style="@style/TextViewOfRecyclerView.ValueTextView"
        android:hint="@string/hint_char_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/char_image" />

    <TextView
        android:id="@+id/spec_textview"
        style="@style/TextViewOfRecyclerView.ValueTextView"
        android:hint="@string/hint_char_species"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/name_textview" />

    <TextView
        android:id="@+id/gender_textview"
        style="@style/TextViewOfRecyclerView.ValueTextView"
        android:hint="@string/hint_char_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/spec_textview" />

    <TextView
        android:id="@+id/status_textview"
        style="@style/TextViewOfRecyclerView.ValueTextView"
        android:hint="@string/hint_char_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/gender_textview" />

    <TextView
        android:id="@+id/label_name_textview"
        style="@style/TextViewOfRecyclerView.LabelTextView"
        android:text="@string/label_name"
        app:layout_constraintBottom_toBottomOf="@+id/name_textview"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_textview" />

    <TextView
        android:id="@+id/label_spec_textview"
        style="@style/TextViewOfRecyclerView.LabelTextView"
        android:text="@string/label_species"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spec_textview" />

    <TextView
        android:id="@+id/label_gender_textview"
        style="@style/TextViewOfRecyclerView.LabelTextView"
        android:text="@string/label_gender"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gender_textview" />

    <TextView
        android:id="@+id/label_status_textview"
        style="@style/TextViewOfRecyclerView.LabelTextView"
        android:text="@string/label_status"
        app:layout_constraintBottom_toBottomOf="@id/status_textview"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/status_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>