<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    android:paddingBottom="4dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/loc_name_textview"
        style="@style/TextViewOfRecyclerView.ValueTextView"
        android:hint="@string/hint_location_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loc_type_textview"
        style="@style/TextViewOfRecyclerView.ValueTextView"
        android:hint="@string/hint_location_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/loc_name_textview" />

    <TextView
        android:id="@+id/loc_dimen_textview"
        style="@style/TextViewOfRecyclerView.ValueTextView"
        android:hint="@string/hint_location_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/loc_type_textview" />

    <TextView
        android:id="@+id/label_loc_name"
        style="@style/TextViewOfRecyclerView.LabelTextView"
        android:text="@string/label_loc_name"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loc_name_textview" />

    <TextView
        android:id="@+id/label_loc_type"
        style="@style/TextViewOfRecyclerView.LabelTextView"
        android:text="@string/label_loc_type"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loc_type_textview" />

    <TextView
        android:id="@+id/label_loc_dimension"
        style="@style/TextViewOfRecyclerView.LabelTextView"
        android:text="@string/label_loc_dimension"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loc_dimen_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>