<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".fragments.CharactersListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCharacters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/holder_character" />

    <TextView
        android:id="@+id/no_results_textview"
        style="@style/NoResultsTextView"
        android:layout_marginTop="24dp"
        android:text="@string/no_results_found_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recyclerCharacters"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/recyclerCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/recyclerCharacters" />

    <ProgressBar
        android:id="@+id/paging_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/filters_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/filters_button" />

    <Button
        android:id="@+id/filters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/show_filters_button"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerCharacters" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/filters_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filters_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filters_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/filter_name"
            style="@style/TextViewOfFilter.TextView"
            android:text="@string/filter_name"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/filters_container" />

        <TextView
            android:id="@+id/filter_species"
            style="@style/TextViewOfFilter.TextView"
            android:text="@string/filter_species"
            app:layout_constraintBottom_toTopOf="@id/filter_type"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_name" />

        <TextView
            android:id="@+id/filter_type"
            style="@style/TextViewOfFilter.TextView"
            android:text="@string/filter_type"
            app:layout_constraintBottom_toTopOf="@id/filter_status"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_species" />

        <TextView
            android:id="@+id/filter_status"
            style="@style/TextViewOfFilter.TextView"
            android:text="@string/filter_status"
            app:layout_constraintBottom_toTopOf="@id/filter_gender"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_type" />

        <TextView
            android:id="@+id/filter_gender"
            style="@style/TextViewOfFilter.TextView"
            android:text="@string/filter_gender"
            app:layout_constraintBottom_toTopOf="@id/use_filter"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_status" />

        <EditText
            android:id="@+id/edit_name"
            style="@style/TextViewOfFilter.EditText"
            android:hint="@string/hint_filter_character_name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@id/filter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/filter_name" />

        <EditText
            android:id="@+id/edit_species"
            style="@style/TextViewOfFilter.EditText"
            android:hint="@string/hint_filter_character_species"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@id/filter_species"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/filter_species" />

        <EditText
            android:id="@+id/edit_type"
            style="@style/TextViewOfFilter.EditText"
            android:hint="@string/hint_filter_character_type"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@id/filter_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/filter_type" />

        <Spinner
            android:id="@+id/spinner_status"
            style="@style/TextViewOfFilter.Spinner"
            app:layout_constraintBottom_toBottomOf="@id/filter_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/filter_status" />

        <Spinner
            android:id="@+id/spinner_gender"
            style="@style/TextViewOfFilter.Spinner"
            app:layout_constraintBottom_toBottomOf="@id/filter_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/filter_gender" />

        <Button
            android:id="@+id/use_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/button_use_filter"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>