<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".fragments.EpisodeListFragment"
        android:padding="4dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/name_textview"
            android:text="@string/ep_name"
            style="@style/TextViewOfOneItemFragment.LabelTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/ep_code_textview"
            android:text="@string/ep_code"
            style="@style/TextViewOfOneItemFragment.LabelTextView"
            app:layout_constraintTop_toBottomOf="@id/name_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/air_date_textview"
            android:text="@string/ep_air_date"
            style="@style/TextViewOfOneItemFragment.LabelTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/ep_code_textview"/>

        <TextView
            android:id="@+id/ep_id_textview"
            android:text="@string/ep_id"
            style="@style/TextViewOfOneItemFragment.LabelTextView"
            app:layout_constraintTop_toBottomOf="@id/air_date_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/ep_url_textview"
            android:text="@string/ep_url"
            style="@style/TextViewOfOneItemFragment.LabelTextView"
            app:layout_constraintTop_toTopOf="@id/value_url_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/value_url_textview"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/ep_created_textview"
            android:text="@string/ep_created"
            style="@style/TextViewOfOneItemFragment.LabelTextView"
            app:layout_constraintTop_toBottomOf="@id/ep_url_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>

        <TextView
            android:id="@+id/value_name_textview"
            style="@style/TextViewOfOneItemFragment.ValueTextView"
            app:layout_constraintTop_toTopOf="@id/name_textview"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/name_textview"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/value_code_textview"
            style="@style/TextViewOfOneItemFragment.ValueTextView"
            app:layout_constraintTop_toTopOf="@id/ep_code_textview"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/ep_code_textview"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/value_air_date_textview"
            style="@style/TextViewOfOneItemFragment.ValueTextView"
            app:layout_constraintTop_toTopOf="@id/air_date_textview"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/air_date_textview"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/value_id_textview"
            style="@style/TextViewOfOneItemFragment.ValueTextView"
            app:layout_constraintTop_toTopOf="@id/ep_id_textview"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/ep_id_textview"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/value_url_textview"
            style="@style/TextViewOfOneItemFragment.URLTextView"
            app:layout_constraintTop_toBottomOf="@id/value_id_textview"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toTopOf="@id/value_created_textview"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/value_created_textview"
            style="@style/TextViewOfOneItemFragment.ValueTextView"
            app:layout_constraintTop_toTopOf="@id/ep_created_textview"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/ep_created_textview"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ep_created_textview"
            tools:listitem="@layout/holder_character"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"/>

        <ProgressBar
            android:id="@+id/list_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/recycler"
            app:layout_constraintEnd_toEndOf="@id/recycler"
            app:layout_constraintTop_toTopOf="@id/recycler"
            app:layout_constraintBottom_toBottomOf="@id/recycler"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>